continuing to clean up notebook and make it modular

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -66,14 +66,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "25aba739",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Metrics helpers\n",
+    "import emeval.metrics.dist_calculations as emd\n",
+    "import emeval.metrics.reference_trajectory as emr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "234c622b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "pd.options.display.float_format = '{:.6f}'.format\n",
-    "import arrow\n",
-    "import numpy as np"
+    "import arrow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "748b57dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import scipy as sp\n",
+    "import scipy.interpolate\n",
+    "import scipy.integrate"
    ]
   },
   {
@@ -96,6 +120,8 @@
    "outputs": [],
    "source": [
     "# For maps\n",
+    "import geopandas as gpd\n",
+    "import shapely as shp\n",
     "import folium\n",
     "import branca.element as bre"
    ]
@@ -219,9 +245,7 @@
     "            continue\n",
     "        for phone_label, phone_detail_map in phone_map.items():\n",
     "            if \"control\" in phone_detail_map[\"role\"]:\n",
-    "#                 print(\"Ignoring %s phone %s since they are always on\" % (phone_detail_map[\"role\"], phone_label))\n",
     "                continue\n",
-    "            # this spec does not have any calibration ranges, but evaluation ranges are actually cooler\n",
     "            for r in phone_detail_map[\"evaluation_ranges\"]:\n",
     "                if r['eval_role_base'] != role:\n",
     "                    continue\n",
@@ -237,10 +261,7 @@
     "                                                                                  tr['end_ts'])\n",
     "                        \n",
     "                        if section_gt_leg[\"type\"] == \"WAITING\":\n",
-    "#                             print(\"Skipping WAITING section %s %s with potential partway transitions\" %\n",
-    "#                                   (tr[\"trip_id\"], section[\"trip_id\"]))\n",
     "                            continue\n",
-    "                        ## and now we have the gt mode!\n",
     "                        gts = {'start_ts': section['start_ts'], \n",
     "                               'end_ts': section['end_ts'], \n",
     "                               'mode': section_gt_leg['mode']}\n",
@@ -381,7 +402,7 @@
    "outputs": [],
    "source": [
     "def get_binary_class_in_sec(os, role, pv, BASE_MODE):\n",
-    "    if type(pv) is not list: pv - [pv]\n",
+    "    if type(pv) is not list: pv = [pv]\n",
     "    trips = []\n",
     "    for v in pv:\n",
     "        trips.extend(get_trip_ss_and_gts_timeline(v, os, role))\n",
@@ -389,9 +410,7 @@
     "    for trip in trips:\n",
     "        for mode in set(BASE_MODE.values()):\n",
     "            for ss in trip['ss_timeline']:\n",
-    "#                 print(ss.keys())\n",
     "                if 'data' in ss.keys():\n",
-    "                    # taken from emission.core.wrapper.modeprediction\n",
     "                    ss = ss['data']\n",
     "                    ss['mode'] = ss['sensed_mode']\n",
     "                ss_dur = ss['end_ts'] - ss['start_ts']\n",
@@ -402,9 +421,6 @@
     "                        gts_dur += dur\n",
     "                        if BASE_MODE[mode] == BASE_MODE[ss['mode']] and BASE_MODE[mode] == BASE_MODE[gts['mode']]:\n",
     "                            TP[mode] = TP.setdefault(mode, 0) + dur\n",
-    "                            if mode == 'TRAIN':\n",
-    "                                pass\n",
-    "#                                 print(TP[mode])\n",
     "                        elif BASE_MODE[mode] == BASE_MODE[ss['mode']] and BASE_MODE[mode] != BASE_MODE[gts['mode']]:\n",
     "                            FP[mode] = FP.setdefault(mode, 0) + dur\n",
     "                        elif BASE_MODE[mode] != BASE_MODE[ss['mode']] and BASE_MODE[mode] == BASE_MODE[gts['mode']]:\n",
@@ -427,15 +443,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "214eb548",
-   "metadata": {},
-   "source": [
-    "#### raw output binary tables\n",
-    "BASE MODES = `['WALKING', 'CYCLING', 'AUTOMOTIVE', 'INVALID']`"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "190607f7",
@@ -448,7 +455,7 @@
     "    df=df.reindex(columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'INVALID'])\n",
     "    dic={}\n",
     "    d = df.reset_index(drop=True)\n",
-    "    dic['ios'+'\\\\_'+'HAHFDC'] = d\n",
+    "    dic[os+'\\\\_'+'HAHFDC'] = d\n",
     "    d = pd.concat(dic, axis=1)\n",
     "    d['Classifier'] = ['TP', 'FP', 'FN', 'TN']\n",
     "    print(d.set_index('Classifier').rename_axis(['Title', 'Mode'], axis=1).astype(int).style.to_latex())\n",
@@ -456,7 +463,7 @@
     "    df=df.reindex(columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'INVALID'])\n",
     "    dic={}\n",
     "    d = df.reset_index(drop=True)\n",
-    "    dic['ios'+'\\\\_'+'HAHFDC'] = d\n",
+    "    dic[os+'\\\\_'+'HAMFDC'] = d\n",
     "    d = pd.concat(dic, axis=1)\n",
     "    d['Classifier'] = ['TP', 'FP', 'FN', 'TN']\n",
     "    print(d.set_index('Classifier').rename_axis(['Title', 'Mode'], axis=1).astype(int).style.to_latex())\n",
@@ -464,19 +471,10 @@
     "    df=df.reindex(columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'INVALID'])\n",
     "    dic={}\n",
     "    d = df.reset_index(drop=True)\n",
-    "    dic['ios'+'\\\\_'+'HAHFDC'] = d\n",
+    "    dic[os+'\\\\_'+'MAHFDC'] = d\n",
     "    d = pd.concat(dic, axis=1)\n",
     "    d['Classifier'] = ['TP', 'FP', 'FN', 'TN']\n",
     "    print(d.set_index('Classifier').rename_axis(['Title', 'Mode'], axis=1).astype(int).style.to_latex())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cb8c868c",
-   "metadata": {},
-   "source": [
-    "#### random forrest binary tables\n",
-    "BASE MODES = `['WALKING', 'CYCLING', 'AUTOMOTIVE', 'INVALID']`"
    ]
   },
   {
@@ -486,10 +484,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_rf_binary(os):\n",
+    "def get_rf_binary(os, pv):\n",
     "    BASE_MODE = IBMM\n",
     "    for role in ['HAHFDC', 'HAMFDC', 'MAHFDC']:\n",
-    "        df = pd.DataFrame(get_binary_class_in_sec(os, role, [rfv_la, rfv_ucb, rfv_sj], BASE_MODE)).fillna(0)\n",
+    "        df = pd.DataFrame(get_binary_class_in_sec(os, role, pv, BASE_MODE)).fillna(0)\n",
     "        df=df.reindex(columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'TRAIN', 'INVALID'])\n",
     "        dic={}\n",
     "        d = df.reset_index(drop=True)\n",
@@ -543,9 +541,9 @@
    "outputs": [],
    "source": [
     "def display_f_score(os, pv, BASE_MODE):\n",
-    "    return ([ (k, round(get_F_score(os, 'HAHFDC', pv, BASE_MODE, beta=1)[k], 4)) for k in get_F_score(os, 'HAHFDC', pv, BASE_MODE, beta=1)],\n",
-    "            [ (k, round(get_F_score(os, 'HAMFDC', pv, BASE_MODE, beta=1)[k], 4)) for k in get_F_score(os, 'HAMFDC', pv, BASE_MODE, beta=1)],\n",
-    "            [ (k, round(get_F_score(os, 'MAHFDC', pv, BASE_MODE, beta=1)[k], 4)) for k in get_F_score(os, 'MAHFDC', pv, BASE_MODE, beta=1)],\n",
+    "    return (pd.DataFrame([ (k, round(get_F_score(os, 'HAHFDC', pv, BASE_MODE, beta=1)[k], 4)) for k in get_F_score(os, 'HAHFDC', pv, BASE_MODE, beta=1)]),\n",
+    "            pd.DataFrame([ (k, round(get_F_score(os, 'HAMFDC', pv, BASE_MODE, beta=1)[k], 4)) for k in get_F_score(os, 'HAMFDC', pv, BASE_MODE, beta=1)]),\n",
+    "            pd.DataFrame([ (k, round(get_F_score(os, 'MAHFDC', pv, BASE_MODE, beta=1)[k], 4)) for k in get_F_score(os, 'MAHFDC', pv, BASE_MODE, beta=1)])\n",
     "            )"
    ]
   },
@@ -584,10 +582,12 @@
     "            gts_dur = 0\n",
     "            cm = {}\n",
     "            for gts in trip['gts_timeline']:\n",
+    "                dur = 0\n",
     "                if ss['end_ts'] >= gts['start_ts'] and ss['start_ts'] <= gts['end_ts']:\n",
     "                    dur = min(ss['end_ts'], gts['end_ts']) - max(ss['start_ts'], gts['start_ts'])\n",
-    "                    gts_dur += dur\n",
-    "                    cm[gts['mode']] = cm.setdefault(gts['mode'], 0) + dur\n",
+    "                    \n",
+    "                gts_dur += dur\n",
+    "                cm[gts['mode']] = cm.setdefault(gts['mode'], 0) + dur\n",
     "            leftover = ss_dur - gts_dur\n",
     "            assert leftover >= 0, f\"ERROR, NEGATIVE LEFTOVER OF {leftover}, NEED TO INVESTIGATE\"\n",
     "            cm['NO_GT'] = cm.setdefault('NO_GT', 0) + leftover\n",
@@ -628,31 +628,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d515ac7f",
+   "metadata": {},
+   "source": [
+    "#### inferred index map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be58e991",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IIM = {0 : 'UNKNOWN', 1 : 'WALKING', 2 : 'BICYCLING', 3 : 'BUS', 4 : 'TRAIN', 5 : 'CAR', 6 : 'AIR_OR_HSR'}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "260d7a30",
+   "metadata": {},
+   "source": [
+    "#### cleaned index map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21989482",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MotionTypes(enum.Enum):\n",
+    "    IN_VEHICLE = 0\n",
+    "    BICYCLING = 1\n",
+    "    ON_FOOT = 2\n",
+    "    STILL = 3\n",
+    "    UNKNOWN = 4\n",
+    "    TILTING = 5 \n",
+    "    WALKING = 7\n",
+    "    RUNNING = 8\n",
+    "    NONE = 9\n",
+    "    STOPPED_WHILE_IN_VEHICLE = 10\n",
+    "    AIR_OR_HSR = 11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "766db895",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CIM = {0 : 'AUTOMOTIVE', 1 : 'CYCLING', 2 : 'WALKING', 3 : 'WALKING', 4 : 'INVALID', 5 : 'WALKING', 7 : 'WALKING', 8 : 'RUNNING', 9 : 'INVALID', 10 : 'AUTOMOTIVE', 11 : 'AUTOMOTIVE'}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "34dfe8b4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_rf_cm(os, BMM):\n",
+    "def get_rf_cm(os, pv, BMM, INDEX_MAP):\n",
     "    if os == 'ios':\n",
-    "        df = pd.DataFrame(get_confusion_matrix('ios', 'HAHFDC', [rfv_la, rfv_sj, rfv_ucb])).groupby('sensed_mode').sum().astype(int)\n",
+    "        df = pd.DataFrame(get_confusion_matrix('ios', 'HAHFDC', pv)).groupby('sensed_mode').sum().astype(int).rename(index=INDEX_MAP)\n",
     "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
     "                   index=['WALKING', 'BICYCLING', 'TRAIN', 'CAR', 'AIR_OR_HSR']).style.to_latex())\n",
-    "        df = pd.DataFrame(get_confusion_matrix('ios', 'HAMFDC', [rfv_la, rfv_sj, rfv_ucb])).groupby('sensed_mode').sum().astype(int)\n",
+    "        df = pd.DataFrame(get_confusion_matrix('ios', 'HAMFDC', pv)).groupby('sensed_mode').sum().astype(int).rename(index=INDEX_MAP)\n",
     "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
     "                   index=['WALKING', 'BICYCLING', 'CAR', 'AIR_OR_HSR']).style.to_latex())\n",
-    "        df = pd.DataFrame(get_confusion_matrix('ios', 'MAHFDC', [rfv_la, rfv_sj, rfv_ucb])).groupby('sensed_mode').sum().astype(int)\n",
+    "        df = pd.DataFrame(get_confusion_matrix('ios', 'MAHFDC', pv)).groupby('sensed_mode').sum().astype(int).rename(index=INDEX_MAP)\n",
     "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
     "                   index=['WALKING', 'BICYCLING', 'CAR']).style.to_latex())\n",
     "    if os == 'android':\n",
-    "        df = pd.DataFrame(get_confusion_matrix('android', 'HAHFDC', [rfv_la, rfv_sj, rfv_ucb])).groupby('sensed_mode').sum().astype(int)\n",
+    "        df = pd.DataFrame(get_confusion_matrix('android', 'HAHFDC', pv)).groupby('sensed_mode').sum().astype(int).rename(index=INDEX_MAP)\n",
     "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
     "                   index=['WALKING', 'BICYCLING', 'CAR', 'AIR_OR_HSR']).style.to_latex())\n",
-    "        df = pd.DataFrame(get_confusion_matrix('android', 'HAMFDC', [rfv_la, rfv_sj, rfv_ucb])).groupby('sensed_mode').sum().astype(int)\n",
+    "        df = pd.DataFrame(get_confusion_matrix('android', 'HAMFDC', pv)).groupby('sensed_mode').sum().astype(int).rename(index=INDEX_MAP)\n",
     "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
     "                   index=['WALKING', 'BICYCLING', 'TRAIN', 'CAR']).style.to_latex())\n",
-    "        df = pd.DataFrame(get_confusion_matrix('android', 'MAHFDC', [rfv_la, rfv_sj, rfv_ucb])).groupby('sensed_mode').sum().astype(int)\n",
+    "        df = pd.DataFrame(get_confusion_matrix('android', 'MAHFDC', pv)).groupby('sensed_mode').sum().astype(int).rename(index=INDEX_MAP)\n",
     "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
     "                   index=['WALKING', 'BICYCLING', 'TRAIN', 'CAR', 'AIR_OR_HSR']).style.to_latex())"
    ]
@@ -858,7 +915,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_raw_cm('ios', [cv_la, cv_sj, cv_ucb])"
+    "get_rf_cm('ios', [cv_la, cv_sj, cv_ucb], CBMM, CIM)"
    ]
   },
   {
@@ -886,7 +943,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_rf_binary('ios')"
+    "get_rf_binary('ios', [rfv_la,rfv_sj,rfv_ucb])"
    ]
   },
   {
@@ -896,7 +953,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_rf_binary('android')"
+    "get_rf_binary('android', [rfv_la,rfv_sj,rfv_ucb])"
    ]
   },
   {
@@ -926,7 +983,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_rf_cm('ios')"
+    "get_rf_cm('ios', [rfv_la, rfv_sj, rfv_ucb], IBMM, IIM)"
    ]
   },
   {
@@ -936,7 +993,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_rf_cm('android')"
+    "get_rf_cm('android', [rfv_la, rfv_sj, rfv_ucb], IBMM, IIM)"
    ]
   },
   {
@@ -954,7 +1011,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_rf_binary('ios',)"
+    "get_rf_binary('ios', [gisv_la, gisv_sj, gisv_ucb])"
    ]
   },
   {
@@ -964,7 +1021,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_rf_binary('android')"
+    "get_rf_binary('android', [gisv_la, gisv_sj, gisv_ucb])"
    ]
   },
   {
