Fixed bug in get timeline for NO_SENSED mode
BUG: we were not counting NO_SENSED in FN (when mode matches with the first gts mode) else TN
FIX: relies on ordered timeline, look at the first gts mode, if it equals to current mode set as FN else set as TN

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -402,14 +402,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_binary_class_in_sec(os, role, pv, BASE_MODE):\n",
-    "    if type(pv) is not list: pv - [pv]\n",
-    "    trips = []\n",
-    "    for v in pv:\n",
-    "        trips.extend(get_trip_ss_and_gts_timeline(v, os, role))\n",
+    "def get_binary_class_in_sec(os, role, pv, BASE_MODE, test=False, test_trip=None):\n",
+    "    if not test:\n",
+    "        if type(pv) is not list: pv - [pv]\n",
+    "        trips = []\n",
+    "        for v in pv:\n",
+    "            trips.extend(get_trip_ss_and_gts_timeline(v, os, role))\n",
+    "    else:\n",
+    "        trips = test_trip if type(test_trip) is list else [test_trip]\n",
     "    TP, FN, FP, TN = {}, {}, {}, {}\n",
     "    for trip in trips:\n",
     "        for mode in set(BASE_MODE.values()):\n",
+    "            # get no sensed for a given mode \n",
+    "            #### Note, this relies on the assumption that our timelines are always ordered\n",
+    "            no_sensed = max(0, trip['ss_timeline'][0]['start_ts'] - trip['gts_timeline'][0]['start_ts'])\n",
+    "            if mode == BASE_MODE[trip['gts_timeline'][0]['mode']]:\n",
+    "                # False Negative\n",
+    "                FN[mode] = no_sensed\n",
+    "            else:\n",
+    "                # True Negative\n",
+    "                TN[mode] = no_sensed\n",
     "            for ss in trip['ss_timeline']:\n",
     "#                 print(ss.keys())\n",
     "                if 'data' in ss.keys():\n",
@@ -940,6 +952,83 @@
    "outputs": [],
    "source": [
     "get_rf_cm('android')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6ae7028",
+   "metadata": {},
+   "source": [
+    "# Unite Testing\n",
+    "\n",
+    "* get_binary_class_in_sec(os, role, pv, BASE_MODE, test=False, test_trip=None)\n",
+    "* get_F_score(os, role, pv, BASE_MODE, beta=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f19c200f",
+   "metadata": {},
+   "source": [
+    "## Example timeline\n",
+    "\n",
+    "\n",
+    "* pipeline timeline\n",
+    "\n",
+    "WALKING (0.5, 1.35) -> CYCLING (1.35, 2.7) -> WALKING (2.7, 3.5)\n",
+    "\n",
+    "* ground truth timeline\n",
+    "\n",
+    "WALKING (0, 1.05) -> BICYCLING (1.05, 3.1)\n",
+    "\n",
+    "* binary classifiers\n",
+    "    + TP \n",
+    "        + [WALKING: 0.55] \n",
+    "        + [CYCLING: 1.35]\n",
+    "        + [INVALID: ....]\n",
+    "    + FP \n",
+    "        + [WALKING: 1.10] \n",
+    "        + [CYCLING: 0.00]\n",
+    "        + [INVALID: ....]\n",
+    "    + FN \n",
+    "        + [WALKING: 0.50] \n",
+    "        + [CYCLING: 0.70]\n",
+    "        + [INVALID: ....]\n",
+    "    + TN \n",
+    "        + [WALKING: 1.35] \n",
+    "        + [CYCLING: 1.45]\n",
+    "        + [INVALID: ....]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11aa6c03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_trip = {\n",
+    "    'ss_timeline'  : [{'start_ts' : 0.5, 'end_ts' : 1.35, 'mode' : 'WALKING'},\n",
+    "                      {'start_ts' : 1.35, 'end_ts' : 2.7, 'mode' : 'CYCLING'}, \n",
+    "                      {'start_ts' : 2.7, 'end_ts' : 3.5, 'mode' : 'WALKING'}],\n",
+    "    'gts_timeline' : [{'start_ts' : 0, 'end_ts' : 1.05, 'mode' : 'WALKING'}, \n",
+    "                      {'start_ts' : 1.05, 'end_ts' : 3.1, 'mode' : 'BICYCLING'}]\n",
+    "}\n",
+    "test_BMM = {'WALKING' : 'WALKING', 'CYCLING' : 'CYCLING', 'BICYCLING' : 'CYCLING'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa81a9cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = get_binary_class_in_sec(..., ..., ..., test_BMM, test=True, test_trip=test_trip)\n",
+    "assert round(res[0]['WALKING'], 2) == 0.55 and round(res[0]['CYCLING'], 2) == 1.35 and  len(res[0]) == 2, f\"TP wrong\"\n",
+    "assert round(res[1]['WALKING'], 2) == 1.10 and len(res[1]) == 1, f\"FP wrong\"\n",
+    "assert round(res[2]['WALKING'], 2) == 0.50 and round(res[2]['CYCLING'], 2) == 0.70 and  len(res[2]) == 2, f\"FN wrong\"\n",
+    "assert round(res[3]['WALKING'], 2) == 1.35 and round(res[3]['CYCLING'], 2) == 1.45 and  len(res[2]) == 2, f\"TN wrong\""
    ]
   }
  ],
