fixed same no sensed error in get cm

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -477,10 +477,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_F_score(os, role, pv, BASE_MODE, beta=1):\n",
-    "    assert os in ['android', 'ios'], 'UNKNOWN OS'\n",
-    "    assert role in ['accuracy_control', 'HAHFDC', 'HAMFDC', 'MAHFDC', 'power_control'], \"UNKNOWN ROLE\"\n",
-    "    (TP, FP, FN, TN) = get_binary_class_in_sec(os, role, pv, BASE_MODE)\n",
+    "def get_F_score(os, role, pv, BASE_MODE, beta=1, test=False, test_trip=None):\n",
+    "    if not test:\n",
+    "        assert os in ['android', 'ios'], 'UNKNOWN OS'\n",
+    "        assert role in ['accuracy_control', 'HAHFDC', 'HAMFDC', 'MAHFDC', 'power_control'], \"UNKNOWN ROLE\"\n",
+    "        (TP, FP, FN, TN) = get_binary_class_in_sec(os, role, pv, BASE_MODE)\n",
+    "    else:\n",
+    "        (TP, FP, FN, TN) = get_binary_class_in_sec(os, role, pv, BASE_MODE, test=True, test_trip=test_trip)\n",
     "    F_score = {}\n",
     "    for mode in TP.keys():\n",
     "        numerator   = (1 + beta**2) * TP.setdefault(mode, 0)\n",
@@ -577,16 +580,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_confusion_matrix(os, role, pv):\n",
-    "    assert os in ['android', 'ios'], 'UNKNOWN OS'\n",
-    "    assert role in ['accuracy_control', 'HAHFDC', 'HAMFDC', 'MAHFDC', 'power_control'], \"UNKNOWN ROLE\"\n",
+    "def get_confusion_matrix(os, role, pv, test=False, test_trip=None):\n",
     "    cm_l = []\n",
-    "    if type(pv) is not list:\n",
-    "        pv = [pv]\n",
-    "    trips = []\n",
-    "    for v in pv :\n",
-    "        trips.extend(get_trip_ss_and_gts_timeline(v, os, role))\n",
+    "    if not test:\n",
+    "        assert os in ['android', 'ios'], 'UNKNOWN OS'\n",
+    "        assert role in ['accuracy_control', 'HAHFDC', 'HAMFDC', 'MAHFDC', 'power_control'], \"UNKNOWN ROLE\"\n",
+    "        if type(pv) is not list:\n",
+    "            pv = [pv]\n",
+    "        trips = []\n",
+    "        for v in pv :\n",
+    "            trips.extend(get_trip_ss_and_gts_timeline(v, os, role))\n",
+    "    else:\n",
+    "        trips = test_trip if type(test_trip) is list else [test_trip]\n",
     "    for trip in trips:\n",
+    "        ## get no sensed\n",
+    "        if trip['ss_timeline'][0]['start_ts'] > trip['gts_timeline'][0]['start_ts']:\n",
+    "            ns = {\n",
+    "                'sensed_mode' : 'NO_SENSED', \n",
+    "                trip['gts_timeline'][0]['mode'] : trip['ss_timeline'][0]['start_ts'] - trip['gts_timeline'][0]['start_ts']}\n",
+    "            cm_l.append(ns)\n",
     "        for ss in trip['ss_timeline']:\n",
     "            if 'data' in ss.keys():\n",
     "                ss = ss['data']\n",
@@ -956,18 +968,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6ae7028",
+   "id": "3be56f87",
    "metadata": {},
    "source": [
     "# Unite Testing\n",
     "\n",
     "* get_binary_class_in_sec(os, role, pv, BASE_MODE, test=False, test_trip=None)\n",
-    "* get_F_score(os, role, pv, BASE_MODE, beta=1)"
+    "* get_F_score(os, role, pv, BASE_MODE, beta=1, test=False, test_trip=None)\n",
+    "* get_confusion_matrix(os, role, pv, test=False, test_trip=None)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f19c200f",
+   "id": "dd6f943a",
    "metadata": {},
    "source": [
     "## Example timeline\n",
@@ -988,7 +1001,6 @@
     "        + [INVALID: ....]\n",
     "    + FP \n",
     "        + [WALKING: 1.10] \n",
-    "        + [CYCLING: 0.00]\n",
     "        + [INVALID: ....]\n",
     "    + FN \n",
     "        + [WALKING: 0.50] \n",
@@ -997,13 +1009,28 @@
     "    + TN \n",
     "        + [WALKING: 1.35] \n",
     "        + [CYCLING: 1.45]\n",
-    "        + [INVALID: ....]"
+    "        + [INVALID: ....]\n",
+    "* $F_1$ score\n",
+    "    + [WALKING: 0.41]\n",
+    "    + [CYCLING: 0.79]\n",
+    "    \n",
+    "#### Confusion Matrix\n",
+    "\n",
+    "\n",
+    "sensed = [WALKING, CYCLING, NO_SENSED]\n",
+    "ground truth = [WALKING, BICYCLING, NO_GT]\n",
+    "\n",
+    "origin top left\n",
+    "\n",
+    "    [0.55, 0.00, 0.50]\n",
+    "    [0.70, 1.35, 0.00]\n",
+    "    [0.40, 0.00, 0.00]\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11aa6c03",
+   "id": "448cca8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,9 +1045,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "48373e1c",
+   "metadata": {},
+   "source": [
+    "#### get_binary_class_in_sec"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa81a9cb",
+   "id": "793a626e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,6 +1064,48 @@
     "assert round(res[1]['WALKING'], 2) == 1.10 and len(res[1]) == 1, f\"FP wrong\"\n",
     "assert round(res[2]['WALKING'], 2) == 0.50 and round(res[2]['CYCLING'], 2) == 0.70 and  len(res[2]) == 2, f\"FN wrong\"\n",
     "assert round(res[3]['WALKING'], 2) == 1.35 and round(res[3]['CYCLING'], 2) == 1.45 and  len(res[2]) == 2, f\"TN wrong\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c96a932",
+   "metadata": {},
+   "source": [
+    "#### get_F_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be18838f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = get_F_score(..., ..., ..., test_BMM, beta=1, test=True, test_trip=test_trip)\n",
+    "assert round(res['WALKING'],2) == 0.41 and round(res['CYCLING'], 2) == 0.79, f\"F_1 scores wrong\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0dff54d",
+   "metadata": {},
+   "source": [
+    "#### get_confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0f81b9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = get_confusion_matrix(..., ..., ..., test=True, test_trip=test_trip)\n",
+    "df = pd.DataFrame(res).groupby('sensed_mode').sum()\n",
+    "assert 'WALKING' in df.index and 'CYCLING' in df.index and 'NO_SENSED' in df.index, f\"INCORRECT INDECIES \\n EXPECTED \\t 'WALKING', 'CYCLING', 'NO_SENSED' \\n GOT \\t \\t {df.index}\"\n",
+    "assert df.loc['WALKING'].loc['WALKING'] == 0.55 and df.loc['WALKING'].loc['BICYCLING'] == 0.70 and round(df.loc['WALKING'].loc['NO_GT'],2) == 0.40\n",
+    "assert df.loc['CYCLING'].loc['WALKING'] == 0 and df.loc['CYCLING'].loc['BICYCLING'] == 1.35 and round(df.loc['CYCLING'].loc['NO_GT'],2) == 0.0\n",
+    "assert round(df.loc['NO_SENSED'].loc['WALKING'], 2) == 0.50 and df.loc['NO_SENSED'].loc['BICYCLING'] == 0.0 and round(df.loc['NO_SENSED'].loc['NO_GT'],2) == 0.0"
    ]
   }
  ],
