fixed synatx error in new changes, also added tests for INVALID f1 and classifiers, led to minor bug fix in get binary classifier

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -415,13 +415,20 @@
     "        for mode in set(BASE_MODE.values()):\n",
     "            # get no sensed for a given mode \n",
     "            #### Note, this relies on the assumption that our timelines are always ordered\n",
-    "            no_sensed = max(0, trip['ss_timeline'][0]['start_ts'] - trip['gts_timeline'][0]['start_ts'])\n",
-    "            if mode == BASE_MODE[trip['gts_timeline'][0]['mode']]:\n",
-    "                # False Negative\n",
-    "                FN[mode] = no_sensed\n",
-    "            else:\n",
-    "                # True Negative\n",
-    "                TN[mode] = no_sensed\n",
+    "            if len(trip['ss_timeline']) > 0 and len(trip['gts_timeline']) > 0:\n",
+    "                no_sensed = 0\n",
+    "                try:\n",
+    "                    no_sensed = max(0, trip['ss_timeline'][0]['start_ts'] - trip['gts_timeline'][0]['start_ts'])\n",
+    "                except:\n",
+    "                    no_sensed = max(0, trip['ss_timeline'][0]['data']['start_ts'] - trip['gts_timeline'][0]['start_ts'])\n",
+    "                if mode == 'INVALID':\n",
+    "                    FP[mode] = no_sensed\n",
+    "                elif mode == BASE_MODE[trip['gts_timeline'][0]['mode']]:\n",
+    "                    # False Negative\n",
+    "                    FN[mode] = no_sensed\n",
+    "                else:\n",
+    "                    # True Negative\n",
+    "                    TN[mode] = no_sensed\n",
     "            for ss in trip['ss_timeline']:\n",
     "#                 print(ss.keys())\n",
     "                if 'data' in ss.keys():\n",
@@ -435,9 +442,6 @@
     "                        gts_dur += dur\n",
     "                        if BASE_MODE[mode] == BASE_MODE[ss['mode']] and BASE_MODE[mode] == BASE_MODE[gts['mode']]:\n",
     "                            TP[mode] = TP.setdefault(mode, 0) + dur\n",
-    "                            if mode == 'TRAIN':\n",
-    "                                pass\n",
-    "#                                 print(TP[mode])\n",
     "                        elif BASE_MODE[mode] == BASE_MODE[ss['mode']] and BASE_MODE[mode] != BASE_MODE[gts['mode']]:\n",
     "                            FP[mode] = FP.setdefault(mode, 0) + dur\n",
     "                        elif BASE_MODE[mode] != BASE_MODE[ss['mode']] and BASE_MODE[mode] == BASE_MODE[gts['mode']]:\n",
@@ -449,7 +453,7 @@
     "                if leftover > 0:\n",
     "                    # invalid base mode maps to NO_GT mode\n",
     "                    if mode == 'INVALID':\n",
-    "                        TP[mode] = TP.setdefault(mode, 0) + leftover\n",
+    "                        FN[mode] = TP.setdefault(mode, 0) + leftover\n",
     "                    # We have no gts, but our modes are equal, so a false positive\n",
     "                    elif BASE_MODE[mode] == BASE_MODE[ss['mode']]:\n",
     "                        FP[mode] = FP.setdefault(mode, 0) + leftover\n",
@@ -594,11 +598,19 @@
     "        trips = test_trip if type(test_trip) is list else [test_trip]\n",
     "    for trip in trips:\n",
     "        ## get no sensed\n",
-    "        if trip['ss_timeline'][0]['start_ts'] > trip['gts_timeline'][0]['start_ts']:\n",
-    "            ns = {\n",
-    "                'sensed_mode' : 'NO_SENSED', \n",
-    "                trip['gts_timeline'][0]['mode'] : trip['ss_timeline'][0]['start_ts'] - trip['gts_timeline'][0]['start_ts']}\n",
-    "            cm_l.append(ns)\n",
+    "        if len(trip['ss_timeline']) > 0 and len(trip['gts_timeline']) > 0:\n",
+    "            try:\n",
+    "                if trip['ss_timeline'][0]['start_ts'] > trip['gts_timeline'][0]['start_ts']:\n",
+    "                    ns = {\n",
+    "                        'sensed_mode' : 'NO_SENSED', \n",
+    "                        trip['gts_timeline'][0]['mode'] : trip['ss_timeline'][0]['start_ts'] - trip['gts_timeline'][0]['start_ts']}\n",
+    "                    cm_l.append(ns)\n",
+    "            except:\n",
+    "                if trip['ss_timeline'][0]['data']['start_ts'] > trip['gts_timeline'][0]['start_ts']:\n",
+    "                    ns = {\n",
+    "                        'sensed_mode' : 'NO_SENSED', \n",
+    "                        trip['gts_timeline'][0]['mode'] : trip['ss_timeline'][0]['data']['start_ts'] - trip['gts_timeline'][0]['start_ts']}\n",
+    "                    cm_l.append(ns)\n",
     "        for ss in trip['ss_timeline']:\n",
     "            if 'data' in ss.keys():\n",
     "                ss = ss['data']\n",
@@ -968,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3be56f87",
+   "id": "a114d70a",
    "metadata": {},
    "source": [
     "# Unite Testing\n",
@@ -980,7 +992,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd6f943a",
+   "id": "b804c537",
    "metadata": {},
    "source": [
     "## Example timeline\n",
@@ -998,21 +1010,21 @@
     "    + TP \n",
     "        + [WALKING: 0.55] \n",
     "        + [CYCLING: 1.35]\n",
-    "        + [INVALID: ....]\n",
     "    + FP \n",
     "        + [WALKING: 1.10] \n",
-    "        + [INVALID: ....]\n",
+    "        + [INVALID: 0.5]\n",
     "    + FN \n",
     "        + [WALKING: 0.50] \n",
     "        + [CYCLING: 0.70]\n",
-    "        + [INVALID: ....]\n",
+    "        + [INVALID: 0.4]\n",
     "    + TN \n",
     "        + [WALKING: 1.35] \n",
     "        + [CYCLING: 1.45]\n",
-    "        + [INVALID: ....]\n",
+    "        + [INVALID: 2.60]\n",
     "* $F_1$ score\n",
     "    + [WALKING: 0.41]\n",
     "    + [CYCLING: 0.79]\n",
+    "    + [INVALID: ....]\n",
     "    \n",
     "#### Confusion Matrix\n",
     "\n",
@@ -1030,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "448cca8c",
+   "id": "c66986f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,12 +1053,12 @@
     "    'gts_timeline' : [{'start_ts' : 0, 'end_ts' : 1.05, 'mode' : 'WALKING'}, \n",
     "                      {'start_ts' : 1.05, 'end_ts' : 3.1, 'mode' : 'BICYCLING'}]\n",
     "}\n",
-    "test_BMM = {'WALKING' : 'WALKING', 'CYCLING' : 'CYCLING', 'BICYCLING' : 'CYCLING'}"
+    "test_BMM = {'WALKING' : 'WALKING', 'CYCLING' : 'CYCLING', 'BICYCLING' : 'CYCLING', 'NO_SENSED' : 'INVALID', 'NO_GT' : 'INVALID', 'INVALID' : 'INVALID'}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "48373e1c",
+   "id": "ce0ab3af",
    "metadata": {},
    "source": [
     "#### get_binary_class_in_sec"
@@ -1055,20 +1067,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "793a626e",
+   "id": "2734c693",
    "metadata": {},
    "outputs": [],
    "source": [
     "res = get_binary_class_in_sec(..., ..., ..., test_BMM, test=True, test_trip=test_trip)\n",
-    "assert round(res[0]['WALKING'], 2) == 0.55 and round(res[0]['CYCLING'], 2) == 1.35 and  len(res[0]) == 2, f\"TP wrong\"\n",
-    "assert round(res[1]['WALKING'], 2) == 1.10 and len(res[1]) == 1, f\"FP wrong\"\n",
-    "assert round(res[2]['WALKING'], 2) == 0.50 and round(res[2]['CYCLING'], 2) == 0.70 and  len(res[2]) == 2, f\"FN wrong\"\n",
-    "assert round(res[3]['WALKING'], 2) == 1.35 and round(res[3]['CYCLING'], 2) == 1.45 and  len(res[2]) == 2, f\"TN wrong\""
+    "assert round(res[0]['WALKING'], 2) == 0.55 and round(res[0]['CYCLING'], 2) == 1.35 and res[0]['INVALID'] == 0 and len(res[0]) == 3, f\"TP wrong\"\n",
+    "assert round(res[1]['WALKING'], 2) == 1.10 and round(res[1]['INVALID'], 2) == 0.50 and len(res[1]) == 2, f\"FP wrong\"\n",
+    "assert round(res[2]['WALKING'], 2) == 0.50 and round(res[2]['CYCLING'], 2) == 0.70 and round(res[2]['INVALID'], 2) == 0.40 and len(res[2]) == 3, f\"FN wrong\"\n",
+    "assert round(res[3]['WALKING'], 2) == 1.35 and round(res[3]['CYCLING'], 2) == 1.45 and round(res[3]['INVALID'], 2) == 2.60 and len(res[2]) == 3, f\"TN wrong\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9c96a932",
+   "id": "ed5f26d0",
    "metadata": {},
    "source": [
     "#### get_F_score"
@@ -1077,17 +1089,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be18838f",
+   "id": "e52b9de6",
    "metadata": {},
    "outputs": [],
    "source": [
     "res = get_F_score(..., ..., ..., test_BMM, beta=1, test=True, test_trip=test_trip)\n",
-    "assert round(res['WALKING'],2) == 0.41 and round(res['CYCLING'], 2) == 0.79, f\"F_1 scores wrong\""
+    "assert round(res['WALKING'],2) == 0.41 and round(res['CYCLING'], 2) == 0.79 and res['INVALID'] == 0, f\"F_1 scores wrong\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d0dff54d",
+   "id": "f617fc24",
    "metadata": {},
    "source": [
     "#### get_confusion_matrix"
@@ -1096,7 +1108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0f81b9b",
+   "id": "4966da38",
    "metadata": {},
    "outputs": [],
    "source": [
